A new lib directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
         "lib": ["dom", "es5", "es2015.promise", "es2015.iterable"]
     },
     "include": [
-        "*.ts"
+        "lambdalab.ts"
     ]
 }
