--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "lambdalab",
   "version": "1.0.0",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "typescript": "^2.1.4"
+    "typescript": "^2.1.4",
+    "webpack": "^2.2.1"
   },
   "license": "MIT",
   "scripts": {
