--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "build-web": "tsc && webpack",
+    "build-web": "tsc -p tsconfig.web.json && webpack",
     "build-cli": "tsc -p tsconfig.cli.json"
   },
   "bin": {
