A couple of stricter TypeScript options

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,9 @@
     "compilerOptions": {
         "noImplicitAny": true,
         "strictNullChecks": true,
+        "noImplicitThis": true,
+        "noImplicitReturns": true,
+
         "outDir": "build"
     }
 }
